# infinite-candle

./: .gitignore  README.md  favorite-scenes.md
clips/: fireworks_show.npy  plasma_loop_v1.npy  plasma_rainbow.npy  snow_heavy.npy  wireframes_v1.npy
hardware/: BOM.md  readme.md
lights-control/: main.py  pyproject.toml
lights-control/src/: config.py  main.py  scene_store.py
lights-control/src/api/: schemas.py
lights-control/src/drivers/: led_interface.py
lights-control/src/effects/: abstract.py  alien.py  breathing.py  christmas_tree.py  factory.py  fire.py  fireworks.py  gol.py  grid_system.py  lava.py  particle_system.py  player.py  snow.py  solid.py  stripes.py
lights-control/src/engine/: compositor.py  mapper.py
offline-sim/: generate_christmas_tree.py  generate_chrome.py  generate_fireworks.py  generate_hyperspace.py  generate_plasma.py  generate_rubiks_solve.py  generate_snow.py  generate_wireframes.py  main.py  pyproject.toml
system/: readme.md
system/src/: 01_os_config.sh  02_install_deps.sh  03_user_env.sh
system/startup/: infinite-candle.service
