[project]
name = "lights-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.9",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "rpi-ws281x>=5.0.0 ; sys_platform == 'linux'",
    "uvicorn[standard]>=0.38.0",
]
